2013-07-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Remove --disable-werror from configuration.
	* build-uclibc.sh: Likewise.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Updated for mainline branch.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Use define-release.sh and associated
	environment variables.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* define-release.sh: Change release to mainline.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Add comment regarding CFLAGS_FOR_TARGET.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* ChangeLog: Correct errors from cherry-picking copyright updates.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* ChangeLog: Correct errors from cherry-picking arc-clone-all.sh.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* avr-versions.sh: Use mainline version for binutils and 4.8
	versions for all else, during migration.

2013-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Based on an idea from Christian Ruppert
	<christian.ruppert@abilis.com>

	* build-all.sh: Add --uclibc-defconfig option, setting
	UCLIBC_DEFCFG environment variable.
	* build-uclibc.sh: Use UCLIBC_DEFCFG environment variable to
	specify defconfig for uClibc.

2013-06-25  Simon Cook  <simon.cook@embecosm.com>

	* tag-release.sh: Use LINUXDIR environment variable.

2013-06-20  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Disable automatic patching of relative RPATHs.

2013-06-18  Simon Cook  <simon.cook@embecosm.com>

	* rel-rpaths.sh: Added script to replace hard-coded RPATHs in
	the compiled toolchain with those relative to INSTALL.
	* build-all.sh: Added option to enable/disable setting of relative
	RPATHs. This is enabled by default.

2013-06-17  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Provide separate environment variables for ELF32